Add TimeConvertor unit tests and refactor core build.gradle